# flatpak-platform

./: .gitignore  Dockerfile  README.md  gtk-default-themes.patch  inkscape-dep.patch  io.elementary.Sdk.json  io.elementary.Sdk.json.in  meson.build  meson_options.txt
.github/actions/maximize-build-space/: action.yml
.github/workflows/: CI.yml  ci.yml  daily.yml  docker.yml  flatpak-x-checker.yml  mirror.yml  release.yml
architectures/: aarch64.crossfile  x86_64.crossfile
data/: meson.build  platform.appdata.xml.in  sdk.appdata.xml.in
platform-data/: meson.build
platform-data/data/: meson.build  platform.appdata.xml.in  sdk.appdata.xml.in
platform-data/po/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+160 more)
